--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <div>Div added and button</div>
+    <div>Div added and button, and making change for confilct</div>
     <div> Also added radio for new features</div>
     <div> Testing for PR req</div>
 </html>
